# assistant

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.mimocode/plans/: 1781368029945-eager-squid.md  1781370794630-nimble-wolf.md  1781391002912-playful-canyon.md  1781393186100-jolly-harbor.md  1781405184555-shiny-eagle.md  1781444045809-playful-tiger.md  1781444729106-gentle-panda.md
assistant/: README.md  __init__.py  config.py  grounding.py  http_client.py  llm.py  main.py  matrix.py  reactions.py  runtime.py  tools.py
assistant/builtin_tools/: README.md  __init__.py  reply.py
assistant/builtin_tools/calendar/: README.md  __init__.py  models.py  ports.py  recurrence.py  repository.py  service.py  tools.py
assistant/builtin_tools/interaction/: README.md  __init__.py  tools.py
assistant/builtin_tools/procedures/: README.md  __init__.py  tools.py
assistant/builtin_tools/wellbeing/: README.md  __init__.py  models.py  ports.py  repository.py  service.py  tools.py
assistant/interaction/: __init__.py  ports.py  repository.py
assistant/memory/: README.md  __init__.py  extraction.py  history.py  models.py  ports.py  repository.py  service.py
assistant/storage/: README.md  __init__.py  connection.py  migrations.py
matrix/: .env.example  README.md
matrix/docs/: BACKUP-RESTORE.md  PRODUCTION-CHECKLIST.md  TROUBLESHOOTING.md  UPGRADE.md
matrix/scripts/: bootstrap-certs.sh  common-certs.sh  create_users.sh  healthcheck.sh  init-certs.sh  init-config.sh  prefill-assistant-env.sh  register-users.sh
scripts/: preflight-stack.sh  stack-up.sh
tests/: conftest.py  test_ask_user.py  test_calendar.py  test_grounding.py  test_memory.py  test_procedure_memory.py  test_reactions.py  test_runtime.py  test_wellbeing.py
(+9 files in other folders)
